# AI-Hub

./: .gitignore  README.md
audio/openai_stt_streamlit/: app.py  pyproject.toml  requirements.txt
audio/openai_tts_streamlit/: README.md  app.py  main.py  tts_service.py
docs_cursor/: bookmark_export.md  cobalt_docs.md  gitingest.md
experiments/agent_openai/: main.py
experiments/agno_coding/: README.md  comparison.md  example.py  main.py  requirements.txt  test_agent.py
experiments/agno_multi_source/: README.md  requirements.txt
experiments/deepgram_platform/: README.md  app.py  deepgram_python_sdk_docs.md  pyproject.toml  requirements.txt
experiments/deepgram_platform/src/deepgram_platform/: __init__.py
experiments/gemini_exp/: README.md  pyproject.toml  requirements.txt
experiments/gemini_langchain/: main.py  pyproject.toml
experiments/gradio_exp/: app.py  hello.py  pyproject.toml  requirements.txt
experiments/gradio_exp/examples/: MultiAgents.py  chatbot_editable.py  hitl.py  story_gen.py
experiments/gradio_exp/multi_utility_app/: Command： a new tool for building multi-agent architectures in LangGraph [6BJDKf90L9A].en.vtt  README.md  The Creepiest Missing Person Cases [vQsky8tc8V0].en.vtt  app.py  config.py  hello.py  pyproject.toml  requirements.txt  temp.py
experiments/gradio_exp/multi_utility_app/lib/: common.py
experiments/gradio_exp/multi_utility_app/src/backend/config/: settings.py
experiments/gradio_exp/multi_utility_app/src/backend/services/: github_service.py  twitter_service.py  youtube_service.py
experiments/gradio_exp/multi_utility_app/src/backend/utils/: file_utils.py  formatters.py  llm.py
experiments/gradio_exp/multi_utility_app/src/frontend/config/: ui_settings.py
experiments/gradio_exp/multi_utility_app/src/frontend/tabs/: github_tab.py  twitter_tab.py  youtube_tab.py
experiments/gradio_exp/multi_utility_app/tabs/: twitter.py  youtube.py
experiments/gradio_exp/output/: resources_20250112_180012.md  resources_20250112_180128.md
experiments/media_summarizer/: README.md  app.py  pyproject.toml  requirements.txt
experiments/media_summarizer/src/media_summarizer/: __init__.py
experiments/medical_helper/: README.md  app.py  health_data.json  models.py  utils.py
experiments/smolagents_exp/: app.py
experiments/spotify_manager/: .cache  README.md  (+3 more)
(+33 files in other folders)
